--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "solid-authing",
   "version": "1.0.0",
   "description": "solid and authing all in one",
-  "main": "index.js",
+  "main": "dist/solid-authing-browser.min.js",
+  "browser": "dist/solid-authing-browser.min.js",
+  "unpkg": "dist/solid-authing-browser.min.js",
   "directories": {
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +27,20 @@
   },
   "homepage": "https://github.com/Authing/solid-authing#readme",
   "dependencies": {
-    "authing-js-sdk": "^1.1.7"
+    "authing-js-sdk": "^1.1.7",
+    "solid-auth-client": "^2.2.13"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "json-loader": "^0.5.7",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack": "^4.17.1",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^3.1.0"
   }
 }
